[gd_scene load_steps=33 format=3 uid="uid://dnqbvs78rhgxt"]

[ext_resource type="Script" path="res://scenes/Game/flappy_bird.gd" id="1_b17kb"]
[ext_resource type="Texture2D" uid="uid://cmondqgasr5k7" path="res://textures/sprites/parallaxlayer4.png" id="2_uwraj"]
[ext_resource type="Script" path="res://scenes/Game/character_body_2d.gd" id="2_xq8c6"]
[ext_resource type="Texture2D" uid="uid://dro8btyr7vivy" path="res://textures/sprites/parallaxlayer3.png" id="3_0wgmy"]
[ext_resource type="Texture2D" uid="uid://cy7pvt8a4g7v1" path="res://textures/sprites/parallaxlayer2.png" id="4_gq6u5"]
[ext_resource type="PackedScene" uid="uid://beya546pnikl" path="res://scenes/Game/pipes.tscn" id="5_f3885"]
[ext_resource type="Texture2D" uid="uid://8p1rui52bf45" path="res://textures/sprites/floor.png" id="5_v2223"]
[ext_resource type="Texture2D" uid="uid://df1naqatwqmdv" path="res://textures/sprites/parallaxlayer1.png" id="5_yke3r"]
[ext_resource type="Texture2D" uid="uid://bkujil76hlal" path="res://textures/sprites/ninepatch.png" id="7_b7rrk"]
[ext_resource type="Texture2D" uid="uid://ij2vjert6c2n" path="res://textures/sprites/pinto1.png" id="7_gvsoy"]
[ext_resource type="Texture2D" uid="uid://bwkqaaprq4ubg" path="res://textures/sprites/space1.png" id="7_oh1jx"]
[ext_resource type="Texture2D" uid="uid://cy1x12k5btmhd" path="res://textures/sprites/space2.png" id="7_qdi4t"]
[ext_resource type="FontFile" uid="uid://dpjm31buhpiuo" path="res://styles/fonts/AtariSmall.ttf" id="8_0oil2"]
[ext_resource type="AudioStream" uid="uid://pnf0vpiyofx4" path="res://sounds/ganharscore.wav" id="11_13y00"]
[ext_resource type="AudioStream" uid="uid://dnpqjrxssps8i" path="res://sounds/gameover.wav" id="12_dcplf"]
[ext_resource type="AudioStream" uid="uid://bduxwq0cw6v6b" path="res://sounds/menu_sound.wav" id="13_okpti"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfbc6"]
size = Vector2(24, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ksgku"]
size = Vector2(576, 20)

[sub_resource type="Animation" id="Animation_gi4xy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpaceSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_qdi4t")]
}

[sub_resource type="Animation" id="Animation_yf6nr"]
resource_name = "Space_Animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpaceSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("7_oh1jx"), ExtResource("7_qdi4t"), ExtResource("7_oh1jx")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1u6vm"]
_data = {
"RESET": SubResource("Animation_gi4xy"),
"Space_Animation": SubResource("Animation_yf6nr")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qepd0"]
texture = ExtResource("7_b7rrk")
texture_margin_left = 50.0
texture_margin_top = 50.0
texture_margin_right = 50.0
texture_margin_bottom = 50.0

[sub_resource type="LabelSettings" id="LabelSettings_5x5gn"]
font = ExtResource("8_0oil2")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_74vla"]
font = ExtResource("8_0oil2")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nygtm"]
content_margin_left = 24.0

[sub_resource type="LabelSettings" id="LabelSettings_0gcn0"]
font = ExtResource("8_0oil2")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ft2md"]
content_margin_right = 4.0
bg_color = Color(0, 0.25098, 0.172549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.988235, 0.988235, 0.407843, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
shadow_color = Color(0.517647, 0.517647, 0.141176, 1)
shadow_size = 5
shadow_offset = Vector2(0, 3)
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lt4ah"]
content_margin_left = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_5c5pl"]
font = ExtResource("8_0oil2")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0u10q"]

[sub_resource type="LabelSettings" id="LabelSettings_wqi8k"]
font = ExtResource("8_0oil2")
font_size = 24
outline_size = 3
outline_color = Color(0, 0.25098, 0.172549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_uvaeb"]
font = ExtResource("8_0oil2")
font_size = 24
outline_size = 4
outline_color = Color(0, 0.25098, 0.172549, 1)

[node name="ChickyFly" type="Node2D"]
script = ExtResource("1_b17kb")

[node name="Parallax" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Parallax"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallax/ParallaxLayer4"]
texture = ExtResource("2_uwraj")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Parallax"]
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallax/ParallaxLayer3"]
texture = ExtResource("3_0wgmy")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Parallax"]
motion_scale = Vector2(0.8, 0.8)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallax/ParallaxLayer2"]
texture = ExtResource("4_gq6u5")
centered = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="Parallax"]
motion_mirroring = Vector2(288, 0)

[node name="ParallaxSprite" type="Sprite2D" parent="Parallax/ParallaxLayer"]
texture = ExtResource("5_yke3r")
centered = false

[node name="Pinto" type="CharacterBody2D" parent="." groups=["Player"]]
unique_name_in_owner = true
position = Vector2(36, 256)
collision_mask = 14
script = ExtResource("2_xq8c6")

[node name="PintoCamera" type="Camera2D" parent="Pinto"]
limit_left = 0
limit_top = 0
limit_bottom = 512

[node name="PintoSprite" type="Sprite2D" parent="Pinto"]
unique_name_in_owner = true
texture = ExtResource("7_gvsoy")

[node name="PintoCollision" type="CollisionShape2D" parent="Pinto"]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_xfbc6")

[node name="SpriteChangeTimer" type="Timer" parent="Pinto"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="Up" type="StaticBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(288, 3)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_ksgku")

[node name="ParallaxBackground" type="ParallaxBackground" parent="Up"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Up/ParallaxBackground"]
motion_mirroring = Vector2(576, 0)

[node name="Sprite2D" type="Sprite2D" parent="Up/ParallaxBackground/ParallaxLayer"]
position = Vector2(288, 10)
texture = ExtResource("5_v2223")

[node name="Down" type="StaticBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(288, 509)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_ksgku")

[node name="ParallaxBackground" type="ParallaxBackground" parent="Down"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Down/ParallaxBackground"]
motion_mirroring = Vector2(576, 0)

[node name="Sprite2D" type="Sprite2D" parent="Down/ParallaxBackground/ParallaxLayer"]
position = Vector2(288, 502)
texture = ExtResource("5_v2223")
flip_v = true

[node name="Pipes" parent="." instance=ExtResource("5_f3885")]
unique_name_in_owner = true
position = Vector2(288, 0)

[node name="SpaceSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(140, 430)
scale = Vector2(2, 2)
texture = ExtResource("7_qdi4t")

[node name="MainAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_1u6vm")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuPanel" type="Panel" parent="CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_qepd0")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MenuPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "ChickyFly
"
label_settings = SubResource("LabelSettings_5x5gn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Flappy bird clone"
label_settings = SubResource("LabelSettings_74vla")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_nygtm")
text = "Creator: lostopkk"
label_settings = SubResource("LabelSettings_0gcn0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="CanvasLayer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("8_0oil2")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/hover = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/normal = SubResource("StyleBoxFlat_ft2md")
text = "Play"

[node name="GameOverPanel" type="Panel" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_qepd0")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CanvasLayer/GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over"
label_settings = SubResource("LabelSettings_5x5gn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreOver" type="Label" parent="CanvasLayer/GameOverPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Score: 100"
label_settings = SubResource("LabelSettings_5x5gn")
vertical_alignment = 1

[node name="HighscoreOver" type="Label" parent="CanvasLayer/GameOverPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_lt4ah")
text = "HighScore: 10000"
label_settings = SubResource("LabelSettings_5c5pl")
vertical_alignment = 1

[node name="TryAgainButton" type="Button" parent="CanvasLayer/GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("8_0oil2")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/hover = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_ft2md")
theme_override_styles/normal = SubResource("StyleBoxFlat_ft2md")
text = "Try again?"

[node name="ScorePanel" type="Panel" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.252
offset_bottom = -0.0240021
theme_override_styles/panel = SubResource("StyleBoxEmpty_0u10q")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ScorePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ScorePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LabelScore" type="Label" parent="CanvasLayer/ScorePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Score"
label_settings = SubResource("LabelSettings_wqi8k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="CanvasLayer/ScorePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "100"
label_settings = SubResource("LabelSettings_uvaeb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelHighScore" type="Label" parent="CanvasLayer/ScorePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Highscore"
label_settings = SubResource("LabelSettings_wqi8k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Highscore" type="Label" parent="CanvasLayer/ScorePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "100"
label_settings = SubResource("LabelSettings_uvaeb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GainPointsSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_13y00")
volume_db = -12.0

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("12_dcplf")
volume_db = -12.0

[node name="MenuSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("13_okpti")
volume_db = -16.0

[connection signal="try_again" from="." to="Pipes" method="_on_flappy_bird_try_again"]
[connection signal="game_over" from="Pinto" to="." method="_on_pinto_game_over"]
[connection signal="timeout" from="Pinto/SpriteChangeTimer" to="Pinto" method="_on_sprite_change_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/MenuPanel/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverPanel/MarginContainer/VBoxContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]

[editable path="Pipes"]
